misc: fix input width too short

--- a/src/components/SearchBar/SearchBar.scoped.scss
+++ b/src/components/SearchBar/SearchBar.scoped.scss
@@ -16,6 +16,7 @@
   }
 
   input {
+    width: 320px;
     height: 40px;
     padding: 6px 48px 6px 0;
     font-size: 14px;
